1.56 2017-01-20 rurban
----

  * add binmode to the decrypt/encr,decrypt sample scripts
  * add utf8-encoded testcase to t/decrypt.t [cpan #110921]. use -C
  * stabilized some tests, add diag to sometimes failing sh tests
  * moved filter-util.pl to t/
  * reversed this Changes file to latest first

1.55 2015-07-26 rurban
----

  * Fix t/z_pod-coverage.t with old Test::More by Kent Frederik. RT #106090.
  * Fix t/tee.t + t/order.t race under parallel testing. RT #105396.
    Thanks to Kent Frederik
  * Fix Filter exec refcount, breaking earlier parse exits with __DATA__ RT #101668
    Thanks to user42_kevin@yahoo.com.au
  * Add missing filter_del in exec filter.
  * Add pod for Filter::Util::Call::unimport to fix t/z_pod-coverage.t

1.54 2015-01-17 rurban
----

  * Fix some compiler warnings for -Wall. Some patches by Dave Mitchell. RT #101587
    Note that perl5 itself is not yet -pedantic safe, Filter is.

1.53 2014-12-20 rurban
----

  * Re-release caused by broken SIGNATURE, caused by broken ExtUtils::Makemaker distsignature rules.
    See https://github.com/Perl-Toolchain-Gang/ExtUtils-MakeMaker/issues/177

1.52 2014-12-19 rurban
----

  * Fix Filter::Util::Call regression from 1.50, for filter_add({}) or filter_add([]).
    This broke Switch, see RT #101004.

1.51 2014-12-09 rurban
----

  * Minor -Wall -Wextra cleanups by jhi and me. Fixes RT #100742
  * Updated Copyright years
  * Document and warn about its limitations

1.50 2014-06-04 rurban
----

  * Do not re-bless already blessed filter_add arguments into the callers package.
    Fixes RT #54452
  * t/z_pod-coverage.t: omit empty Filter::decrypt (also fixes RT #84405)
  * Fix Perl Compiler detection in Filter::decrypt

1.49 2013-04-02 rurban
----

  * Better fix for RT #41285 test failures with non-english locale
    (patched by srezic, pull #1)

  * Add t/z_*.t meta tests (now for real), move Try to t/FilterTry,
    add POD to Filter::Util::Call, Filter::Util::Exec and generated
    FilterTry.
