@@ -3,6 +3,7 @@ use Test::More;
 if (!-d ".git" or $^O !~ /^(linux|.*bsd|darwin|solaris|sunos)$/) {
   plan skip_all => "requires a git checkout and a unix for git and diff";
 }
+plan skip_all => "on travis" if $ENV{TRAVIS};
 plan tests => 1;
 
 system("git ls-tree -r --name-only HEAD >MANIFEST.git");
